fix : upload button can enable and disable.

--- a/html/ListOfUserCar.html
+++ b/html/ListOfUserCar.html
@@ -186,7 +186,7 @@
         document.getElementById("myautomatic").disabled = true;
         document.getElementById("mydesc").disabled = true;
         document.getElementById("Save").disabled = true;
-        document.getElementById("Edit_photo").disabled = true;
+        document.getElementById("imageUpload").disabled = true;
     }
 
     function myFunction1() {
@@ -195,7 +195,7 @@
         document.getElementById("myautomatic").disabled = false;
         document.getElementById("mydesc").disabled = false;
         document.getElementById("Save").disabled = false;
-        document.getElementById("Edit_photo").disabled = false;
+        document.getElementById("imageUpload").disabled = false;
     }
 </script>
 
