fix: edit buttons view
buttons in the top of the page has been edited

--- a/html/User-profilepage.html
+++ b/html/User-profilepage.html
@@ -457,11 +457,11 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="file:///D:/TC-WEB-Front/html/User-Addcar.html"><span
-                    class="glyphicon glyphicon-list "></span> List of my car</a></li>
-            <li><a href="file:///D:/TC-WEB-Front/html/User-Addcar.html"><span
+            <li ><a id="myCarList"> <span
+                    class="glyphicon glyphicon-list "></span> List of my cars</a></li>
+            <li><a id="myAddCar"><span
                     class="glyphicon glyphicon-new-window "></span> Add car</a></li>
-            <li><a href="Login.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+            <li><a id="myLogout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
     </div>
 </nav>
