--- a/html/profilePage.html
+++ b/html/profilePage.html
@@ -7,12 +7,14 @@
     <link rel="icon" href="../img/icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
-
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/profilePage.css" type="text/css">
-
+    <script src="../js/jquery-ui.min.css"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
@@ -32,12 +34,12 @@
         <div class="well">
             <img src="../img/mohamad-rashidi-717605-unsplash.jpg" style="height: 250px ; width: 300px">
         </div>
-        <div class="row" >
+        <div class="row">
             <div class="col-sm-12">
                 <div class="well">
                     <p class="text-left">Cost: <b id="myCost"></b></p>
                 </div>
-                <dic class =" row">
+                <dic class=" row">
                     <div class="well column">
                         <p class="text-left">Year: <b id="myYear"></b></p>
                     </div>
@@ -56,12 +58,178 @@
         <div class="well">
             <p class="text-left"> description: <b id="myDescription"></b></p>
         </div>
-        <input type="button" name="next" id="myNext" class="next action-button col-md-2" style="float: right" value="Next"/>
+
+        <div class="well col-md-12">
+            <hr style="color: darkred;">
+            <h1 class="col-md-12 myInfo">RENT</h1>
+            <hr class="col-md-11" style="color: darkred !important;">
+            <div class="dropdown col-md-6">
+                <span class="Amazon">Choose your <span class="glyphicon glyphicon-arrow-right" style="color: darkred"></span> </span>
+                <button class="btn btn-default dropdown-toggle width_btn" type="button" id="menu1" data-toggle="dropdown">
+                    <span id="menu2" style="color: darkred">src</span>
+                    <span class="caret"></span></button>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="btn1">ki</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="btn2">dfs</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="btn3">dfas</a></li>
+                </ul>
+            </div>
+            <div class="dropdown col-md-6">
+                <span class="Amazon">Choose your <span class="glyphicon glyphicon-arrow-right" style="color: darkred"></span></span>
+                <button class="btn btn-default dropdown-toggle width_btn" type="button" id="menu4" data-toggle="dropdown">
+                    <span id="menu3" style="color: darkred">Des</span>
+                    <span class="caret"></span></button>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="menu4">
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="btn4">ki</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="btn5">dfs</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" id="btn6">dfas</a></li>
+                </ul>
+            </div>
+            <hr class="col-md-11" style="color: darkred;">
+            <div class="col-md-12" style="padding-top: 10px ;text-align: center">
+                <div class="col-md-3"> </div>
+                <h4 class="col-md-6">Total price : <span style="color: darkred">1000</span><span class="glyphicon glyphicon-usd"></span></h4>
+                <div class="col-md-3"></div>
+            </div>
+            <hr class="col-md-11" style="color: darkred !important;">
+            <form>
+                <div class="nativeDatePicker">
+                    <label for="bday">Enter Pick up date :</label>
+                    <input type="date" id="bday" name="bday">
+                    <!--<span class="validity"></span>-->
+                </div>
+                <div class="fallbackDatePicker"></div>
+            </form>
+            <form>
+                <div class="nativeDatePicker">
+                    <label for="bday">Enter deliver date:</label>
+                    <input type="date" id="bday" name="bday">
+                    <!--<span class="validity"></span>-->
+                </div>
+                <div class="fallbackDatePicker"></div>
+            </form>
+            <hr class="col-md-11" style="color: darkred !important;">
+        </div>
+
+
+        <input type="button" name="next" id="myNext" class="next action-button col-md-3" style="float: inherit"
+               value="Next"/>
     </fieldset>
     <fieldset>
 
     </fieldset>
 </form>
+
+
+<script>
+    $(document).ready(function () {
+        $("#btn1").click(function () {
+            $("#menu2").text("Ali");
+        });
+        $("#btn2").click(function () {
+            $("#menu2").text("Ali");
+        });
+        $("#btn3").click(function () {
+            $("#menu2").text("Ali");
+        });
+        $("#btn4").click(function () {
+            $("#menu2").text("Ali");
+        });
+        $("#btn5").click(function () {
+            $("#menu2").text("Ali");
+        });
+        $("#btn6").click(function () {
+            $("#menu2").text("Ali");
+        });
+    });
+
+    var nativePicker = document.querySelector('.nativeDatePicker');
+    var fallbackPicker = document.querySelector('.fallbackDatePicker');
+    var fallbackLabel = document.querySelector('.fallbackLabel');
+
+    var yearSelect = document.querySelector('#year');
+    var monthSelect = document.querySelector('#month');
+    var daySelect = document.querySelector('#day');
+    fallbackPicker.style.display = 'none';
+    fallbackLabel.style.display = 'none';
+    var test = document.createElement('input');
+    test.type = 'date';
+    if(test.type === 'text') {
+        nativePicker.style.display = 'none';
+        fallbackPicker.style.display = 'block';
+        fallbackLabel.style.display = 'block';
+        populateDays(monthSelect.value);
+        populateYears();
+    }
+
+    function populateDays(month) {
+        while(daySelect.firstChild){
+            daySelect.removeChild(daySelect.firstChild);
+        }
+        var dayNum;
+        if(month === 'January' || month === 'March' || month === 'May' || month === 'July' || month === 'August' || month === 'October' || month === 'December') {
+            dayNum = 31;
+        } else if(month === 'April' || month === 'June' || month === 'September' || month === 'November') {
+            dayNum = 30;
+        } else {
+
+            var year = yearSelect.value;
+            var leap = (year % 4 === 0 && year % 100 !== 0) || year % 400 === 0;
+            dayNum = leap ? 29 : 28;
+        }
+
+        for(i = 1; i <= dayNum; i++) {
+            var option = document.createElement('option');
+            option.textContent = i;
+            daySelect.appendChild(option);
+        }
+
+        if(previousDay) {
+            daySelect.value = previousDay;
+
+            if(daySelect.value === "") {
+                daySelect.value = previousDay - 1;
+            }
+
+            if(daySelect.value === "") {
+                daySelect.value = previousDay - 2;
+            }
+
+            if(daySelect.value === "") {
+                daySelect.value = previousDay - 3;
+            }
+        }
+    }
+
+    function populateYears() {
+
+        var date = new Date();
+        var year = date.getFullYear();
+
+
+        for(var i = 0; i <= 100; i++) {
+            var option = document.createElement('option');
+            option.textContent = year-i;
+            yearSelect.appendChild(option);
+        }
+    }
+
+    yearSelect.onchange = function() {
+        populateDays(monthSelect.value);
+    }
+
+    monthSelect.onchange = function() {
+        populateDays(monthSelect.value);
+    }
+
+    var previousDay;
+
+
+    daySelect.onchange = function() {
+        previousDay = daySelect.value;
+    }
+
+</script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 
