--- a/html/Login.html
+++ b/html/Login.html
@@ -184,6 +184,7 @@
 </div>
 
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
+<script src="../js/vendor/jquery.cookie.js"></script>
 <script src="../js/main.js"></script>
 
 </body>
