--- a/html/User-profilepage.html
+++ b/html/User-profilepage.html
@@ -690,6 +690,7 @@
 </footer>
 
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
+<script src="../js/vendor/jquery.cookie.js"></script>
 <script src="../js/UserProfile.js"></script>
 <script src="../js/ProfilePage.js"></script>
 
