--- a/html/User-Addcar.html
+++ b/html/User-Addcar.html
@@ -96,6 +96,7 @@
 <!--<script type="text/javascript" src="./index.js"></script>-->
 
 <script src="../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
+<script src="../js/vendor/jquery.cookie.js"></script>
 <script src="../js/User-AddCar.js"></script>
 
 
