--- a/html/AdminUserList.html
+++ b/html/AdminUserList.html
@@ -267,6 +267,9 @@
         });
     }
 </script>
+<script src="../js/vendor/jquery-3.3.1.min.js"></script>
+<script src="../js/vendor/jquery.cookie.js"></script>
+<script src="../js/AdminUserList.js"></script>
 
 </body>
 </html>
