--- a/html/ListOfUserCar.html
+++ b/html/ListOfUserCar.html
@@ -198,6 +198,7 @@
 
 
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
+<script src="../js/vendor/jquery.cookie.js"></script>
 <script src="../js/ListOfUserCar.js"></script>
 
 </body>
