--- a/html/AdminUserList.html
+++ b/html/AdminUserList.html
@@ -269,6 +269,7 @@
 </script>
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
 <script src="../js/vendor/jquery.cookie.js"></script>
+<script src="../js/const.js"></script>
 <script src="../js/AdminUserList.js"></script>
 
 </body>
