--- a/html/Adminpage.html
+++ b/html/Adminpage.html
@@ -165,6 +165,7 @@
 </section>
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
 <script src="../js/vendor/jquery.cookie.js"></script>
+<script src="../js/const.js"></script>
 <script src="../js/Admin.js"></script>
 </body>
 </html>
