--- a/html/AdminAddCar.html
+++ b/html/AdminAddCar.html
@@ -194,6 +194,7 @@
 
 </SCRIPT>
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
+<script src="../js/const.js"></script>
 <script src="../js/Admin.js"></script>
 </body>
 </html>
