--- a/html/Login.html
+++ b/html/Login.html
@@ -185,6 +185,7 @@
 
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
 <script src="../js/vendor/jquery.cookie.js"></script>
+<script src="../js/const.js"></script>
 <script src="../js/main.js"></script>
 
 </body>
