--- a/html/signup.html
+++ b/html/signup.html
@@ -68,7 +68,7 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 
 
-
+<script src="../js/const.js"></script>
 <script  src="../js/signup.js"></script>
 
 
