fix: User delete and save car has been fiexed

--- a/html/AdminUserList.html
+++ b/html/AdminUserList.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <title>TC</title>
     <link rel="icon" href="../img/icon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">-->
 
 
     <link rel="stylesheet" href="../css/Admin.css" type="text/css">
@@ -32,8 +32,8 @@
 
     <title>TC</title>
 
-
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!---->
+    <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
     <link rel="stylesheet" href="../css/AdminUserList.css" type="text/css">
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -101,10 +101,10 @@
             <div class="col-sm-8 text-left" style="padding-top: 100px">
                 <button class="accordion">Ali Omidvar</button>
                 <div class="panel">
-                   <!-- <div class="col-sm-5">
-                        <div class="well">
-                        </div>
-                    </div>-->
+                    <!-- <div class="col-sm-5">
+                         <div class="well">
+                         </div>
+                     </div>-->
                     <hr>
                     <p style="padding-top: 7px"><span class="glyphicon glyphicon-user" style="padding-right: 3px"></span>Name : Ali</p>
                     <hr>
