--- a/html/ListOfUserCar.html
+++ b/html/ListOfUserCar.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <title>TC</title>
     <link rel="icon" href="../img/icon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">-->
 
 
     <link rel="stylesheet" href="../css/ListOfUserCar.css" type="text/css">
@@ -31,10 +31,10 @@
     <!--<script src="../js/bootstrap.js"></script>-->
 
     <title>TC</title>
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css'
-          integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
+    <!--<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css'-->
+    <!--integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>-->
 
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
     <!--<link rel="stylesheet" href="../css/AdminUserList.css" type="text/css">-->
 
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
@@ -68,7 +68,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" style="box-sizing: border-box!important;">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand myInfo" href="#" style="color:#ac2925">Tehran car</a>
+            <a class="navbar-brand myInfo" id="homebutt" style="color:#ac2925">Tehran car</a>
         </div>
 
         <ul class="nav navbar-nav navbar-right">
