feat: admin main page js

--- a/html/User-profilepage.html
+++ b/html/User-profilepage.html
@@ -447,10 +447,10 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" style="box-sizing: border-box!important;">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand myInfo" href="#" style="color:#ac2925">Tehran car</a>
+            <a class="navbar-brand myInfo" id="homeButt" style="color:#ac2925">Tehran car</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Name of User </a></li>
+            <li class="active"><a>Name of User </a></li>
 
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
