--- a/html/Adminpage.html
+++ b/html/Adminpage.html
@@ -67,22 +67,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand page-scroll myInfo" href="" style="color: darkred">TehranCar</a>
+        <a class="navbar-brand page-scroll myInfo" id="homeButt" style="color: darkred">TehranCar</a>
     </div>
 
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
             <li>
-                <a class="page-scroll" href="AdminUserList.html"><span class="glyphicon glyphicon-user "
+                <a class="page-scroll" id="users" href="AdminUserList.html"><span class="glyphicon glyphicon-user "
                                                            style="padding-right: 3px"></span>List of User</a>
             </li>
             <li>
-                <a class="page-scroll" href="#page1"><span class="glyphicon glyphicon-upload"
+                <a class="page-scroll" id="addCar"><span class="glyphicon glyphicon-upload"
                                                            style="padding-right: 3px"></span>Add car</a>
             </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="" class="page-scroll" style="padding-right: 25px!important;"><span
+            <li><a id="logout" class="page-scroll" style="padding-right: 25px!important;"><span
                     class="glyphicon glyphicon-log-out" style="padding-right: 3px"></span>Log out</a></li>
         </ul>
     </div>
