--- a/html/User-Addcar.html
+++ b/html/User-Addcar.html
@@ -29,6 +29,28 @@
 
 <body>
 
+<nav class="navbar navbar-inverse navbar-fixed-top" style="box-sizing: border-box!important;">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand myInfo" id="homeButt" style="color:#ac2925">Tehran car</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li class="active"><a>Name of User </a></li>
+
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+            <li><a id="myCarList"> <span
+                    class="glyphicon glyphicon-list "></span> List of my cars</a></li>
+            <li><a id="myAddCar"><span
+                    class="glyphicon glyphicon-new-window "></span> Add car</a></li>
+            <li><a id="myLogout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        </ul>
+    </div>
+</nav>
+
 <div class="bg-image"></div>
 
 <form id="msform">
