fix : edit user profile page to dynamic page.

--- a/html/User-profilepage.html
+++ b/html/User-profilepage.html
@@ -549,67 +549,67 @@
 
                 <div class="w3-content container" style=" text-align: center ;  ">
                     <div class="w3-row-padding row" id="CarList">
-                        <div class="w3-half w3-margin-bottom col-sm-4">
-                            <img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">
-                            <div class="w3-container w3-white">
-                                <h3 class="name1"></h3>
-                                <h4 class="company1"></h4>
-                                <p class="w3-opacity cost1"></p>
-                                <p class="kilometer1"></p>
-                                <button class="w3-button w3-margin-bottom" id="rent1">Rent</button>
-                            </div>
-                        </div>
+                        <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
+                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">-->
+                            <!--<div class="w3-container w3-white">-->
+                                <!--<h3 class="name1"></h3>-->
+                                <!--<h4 class="company1"></h4>-->
+                                <!--<p class="w3-opacity cost1"></p>-->
+                                <!--<p class="kilometer1"></p>-->
+                                <!--<button class="w3-button w3-margin-bottom" id="rent1">Rent</button>-->
+                            <!--</div>-->
+                        <!--</div>-->
 
-                        <div class="w3-half w3-margin-bottom col-sm-4">
-                            <img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">
-                            <div class="w3-container w3-white">
-                                <h3 class="name2"></h3>
-                                <h4 class="company2"></h4>
-                                <p class="w3-opacity cost2"></p>
-                                <p class="kilometer2"></p>
-                                <button class="w3-button w3-margin-bottom" id="rent2">Rent</button>
-                            </div>
-                        </div>
-                        <div class="w3-half w3-margin-bottom col-sm-4">
-                            <img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">
-                            <div class="w3-container w3-white">
-                                <h3 class="name3"></h3>
-                                <h4 class="company3"></h4>
-                                <p class="w3-opacity cost3"></p>
-                                <p class="kilometer3"></p>
-                                <button class="w3-button w3-margin-bottom" id="rent3">Rent</button>
-                            </div>
-                        </div>
-                        <div class="w3-half w3-margin-bottom col-sm-4">
-                            <img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">
-                            <div class="w3-container w3-white">
-                                <h3 class="name4"></h3>
-                                <h4 class="company4"></h4>
-                                <p class="w3-opacity cost4"></p>
-                                <p class="kilometer4"></p>
-                                <button class="w3-button w3-margin-bottom" id="rent4">Rent</button>
-                            </div>
-                        </div>
-                        <div class="w3-half w3-margin-bottom col-sm-4">
-                            <img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">
-                            <div class="w3-container w3-white">
-                                <h3 class="name5"></h3>
-                                <h4 class="company5"></h4>
-                                <p class="w3-opacity cost5"></p>
-                                <p class="kilometer5"></p>
-                                <button class="w3-button w3-margin-bottom" id="rent5">Rent</button>
-                            </div>
-                        </div>
-                        <div class="w3-half w3-margin-bottom col-sm-4">
-                            <img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">
-                            <div class="w3-container w3-white">
-                                <h3 class="name6"></h3>
-                                <h4 class="company6"></h4>
-                                <p class="w3-opacity cost6"></p>
-                                <p class="kilometer6"></p>
-                                <button class="w3-button w3-margin-bottom" id="rent6">Rent</button>
-                            </div>
-                        </div>
+                        <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
+                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
+                            <!--<div class="w3-container w3-white">-->
+                                <!--<h3 class="name2"></h3>-->
+                                <!--<h4 class="company2"></h4>-->
+                                <!--<p class="w3-opacity cost2"></p>-->
+                                <!--<p class="kilometer2"></p>-->
+                                <!--<button class="w3-button w3-margin-bottom" id="rent2">Rent</button>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
+                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
+                            <!--<div class="w3-container w3-white">-->
+                                <!--<h3 class="name3"></h3>-->
+                                <!--<h4 class="company3"></h4>-->
+                                <!--<p class="w3-opacity cost3"></p>-->
+                                <!--<p class="kilometer3"></p>-->
+                                <!--<button class="w3-button w3-margin-bottom" id="rent3">Rent</button>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
+                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">-->
+                            <!--<div class="w3-container w3-white">-->
+                                <!--<h3 class="name4"></h3>-->
+                                <!--<h4 class="company4"></h4>-->
+                                <!--<p class="w3-opacity cost4"></p>-->
+                                <!--<p class="kilometer4"></p>-->
+                                <!--<button class="w3-button w3-margin-bottom" id="rent4">Rent</button>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
+                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
+                            <!--<div class="w3-container w3-white">-->
+                                <!--<h3 class="name5"></h3>-->
+                                <!--<h4 class="company5"></h4>-->
+                                <!--<p class="w3-opacity cost5"></p>-->
+                                <!--<p class="kilometer5"></p>-->
+                                <!--<button class="w3-button w3-margin-bottom" id="rent5">Rent</button>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
+                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
+                            <!--<div class="w3-container w3-white">-->
+                                <!--<h3 class="name6"></h3>-->
+                                <!--<h4 class="company6"></h4>-->
+                                <!--<p class="w3-opacity cost6"></p>-->
+                                <!--<p class="kilometer6"></p>-->
+                                <!--<button class="w3-button w3-margin-bottom" id="rent6">Rent</button>-->
+                            <!--</div>-->
+                        <!--</div>-->
                     </div>
                 </div>
             </div>
