fix : edit list of user page to dynamic page.

--- a/html/ListOfUserCar.html
+++ b/html/ListOfUserCar.html
@@ -91,13 +91,13 @@
             <div class="col-sm-2 ">
 
             </div>
-            <div class="col-sm-8 " style="padding-top: 100px">
-                <button class="accordion" onclick="myFunction()">Ali Omidvar</button>
+            <div class="col-sm-8 " style="padding-top: 100px" id="UserList">
+                <!--<button class="accordion" onclick="myFunction()">Ali Omidvar</button>
                 <div class="panel">
-                    <!-- <div class="col-sm-5">
+                    &lt;!&ndash; <div class="col-sm-5">
                          <div class="well">
                          </div>
-                     </div>-->
+                     </div>&ndash;&gt;
                     <div class="text-right">
                         <button class="btn btn-block" onclick="myFunction1()" style='font-size:24px'><i class='fas fa-edit'></i></button>
                     </div>
@@ -152,8 +152,8 @@
                         ></span>Save
                         </button>
                         <hr>
-                    </div>
-                </div>
+                    </div>-->
+                <!--</div>-->
             </div>
         </div>
         <div class="col-sm-2 sidenav">
